feat: Refactor system dashboard and super-admin responses to use typed DTOs
- Updated SystemDashboardService and SystemOverviewService to return typed response models instead of Map<String, Object>.
- Introduced new DTOs: ApplicationLogsResponse, DatabaseHealthResponse, HttpMetricsResponse, SystemOverviewResponse, SuperAdminFamiliesResponse, and SuperAdminFamilyDetailsResponse.
- Modified related service and resource tests to accommodate the new response structures.
- Added database migration scripts for new indexes related to identity and membership query paths.
- Enhanced repository smoke tests to validate new indexes.